projet_GOCass/tests/bad/testfile-incorrect-new.go
package main

type T struct {x int}

func main () {
	new(T)
	new(S)
}
